--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
+    "@sentry/nextjs": "^8.9.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
+    "koa": "^2.15.3",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
